infra/old/k8s-legacy/s3-alias.yaml
apiVersion: v1
kind: Service
metadata:
  name: s3-backend
spec:
  type: ExternalName
  externalName: "rook-ceph-rgw-media-store.rook-ceph.svc.cluster.local"
