infra/old/k8s-legacy/ingress-upload-receiver.yaml
---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: upload-receiver
  namespace: default
spec:
  entryPoints: 
    - websecure
  routes:
  - match: (Host(`frikanalen.no`) || Host(`www.frikanalen.no`)) && (PathPrefix(`/api/videos/upload`))
    kind: Rule
    services:
    - kind: Service
      name: upload-receiver
      scheme: http
      port: 1080
  tls:
    certResolver: default
